--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "22.7.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
