--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "start": "node dist/app.js",
     "build": "tsc",
     "watch": "tsc --watch",
-    "dev": "nodemon --watch \"**/*.ts\" --exec \"ts-node\" ./app.ts",
+    "dev": "nodemon --watch \"**/*.ts\" --exec \"ts-node\" ./server.ts",
     "postinstall": "prisma generate"
   },
   "keywords": [],
