--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,17 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "server.ts",
-        "use": "@vercel/node",
-        "config": {
-          "distDir": "dist"
-        }
+        "src": "./server.ts",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "dist/server.js"
+        "dest": "/"
       }
     ]
   }
