--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "dist/app.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "build": "tsc",
     "watch": "tsc --watch",
-    "dev": "nodemon --watch \"**/*.ts\" --exec \"ts-node\" ./server.ts",
+    "dev": "nodemon --watch \"**/*.ts\" --exec \"ts-node\" ./index.ts",
     "postinstall": "prisma generate"
   },
   "keywords": [],
