--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
+    "@types/string-similarity": "^4.0.2",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.7",
     "prisma": "^5.20.0",
@@ -37,8 +38,12 @@
     "express": "^4.21.0",
     "google-auth-library": "^9.14.1",
     "jsonwebtoken": "^9.0.2",
+    "languagedetect": "^2.0.0",
     "openai": "^4.67.1",
     "pg": "^8.13.0",
-    "uuid": "^10.0.0"
+    "string-similarity": "^4.0.4",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.3"
   }
 }
